cmake_minimum_required(VERSION 3.29)
project(Laboratory_work_6)

set(CMAKE_CXX_STANDARD 20)

add_executable(Laboratory_work_6 main.cpp
        findInSorted.cpp
        wordsCounter.cpp
        uniqueWords.cpp
        reverseNum.cpp
        diffWordsCounter.cpp
        plusesDeleter.cpp
        Sort.cpp
        wordsMapCounter.cpp
        Find.cpp
        lab.h)
